workloads/medium-place/firefly-iii/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: firefly-iii
  namespace: medium-place
  labels:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/part-of: firefly-iii
    app.kubernetes.io/version: 5.7.11

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: firefly-iii
      app.kubernetes.io/part-of: firefly-iii

  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^version-\\d+\\.\\d+\\.\\d+$"
        diun.sort_tags: "semver"
      labels:
        app.kubernetes.io/name: firefly-iii
        app.kubernetes.io/part-of: firefly-iii
        app.kubernetes.io/version: 5.7.11

    spec:
      containers:
        - name: firefly-iii
          image: fireflyiii/core:version-5.7.11

          volumeMounts:
            - name: data
              mountPath: /var/www/html/storage/upload

          ports:
            - name: http
              protocol: TCP
              containerPort: 8080

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
