workloads/medium-place/firefly-iii/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: firefly-iii
  namespace: medium-place
  labels:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/part-of: firefly-iii
    app.kubernetes.io/version: 5.7.12
  annotations:
    external-dns.alpha.kubernetes.io/target: 100.125.83.187

spec:
  selector:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/part-of: firefly-iii

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
