workloads/medium-place/firefly-iii/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: firefly-iii
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: tail9b5a.ts.net
  labels:
    app.kubernetes.io/part-of: firefly-iii

spec:
  ingressClassName: private 

  tls:
    - hosts:
        - treasury.medium.place
      secretName: treasury.medium.place-tls

  rules:
    - host: treasury.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: firefly-iii
                port:
                  name: http
